--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.14.1",
     "font-awesome": "^4.7.0",
     "less-loader": "^7.1.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.4.2",
     "vue-core-image-upload": "^2.3.9",
     "vue-fancybox": "^1.0.2",
