--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "font-awesome": "^4.7.0",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "lodash": "^4.17.20",
     "nprogress": "^0.2.0",
+    "uuid": "^8.3.2",
     "vue": "^2.4.2",
     "vue-core-image-upload": "^2.3.9",
     "vue-fancybox": "^1.0.2",
